more obvious map credit. fix workspace filter on mobile.

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -2,7 +2,7 @@
 // Option B: Include parts of Bootstrap
 
 // Your variable overrides
-$body-bg: #fafafa;
+$body-bg: #fff;
 $body-color: #000;
 //
 $yellow: #ffe600;
